<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="?android:textColorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/icon"
                app:srcCompat="@drawable/person"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_batch"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/icon"
                app:srcCompat="@drawable/twitter"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/twitter"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/icon"
                app:srcCompat="@drawable/earth"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/website"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>